Fix overflow-x

--- a/src/components/schedule/table.module.css
+++ b/src/components/schedule/table.module.css
@@ -44,6 +44,6 @@
         align-self: flex-start;
         justify-content: flex-start;
         max-height: 100vh;
-        width: max-content;
+        width: calc(100vw - 1rem);
     }
 }
